# GhidraVibe

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  flake.nix  mcp-test-results.json  secretspec.toml
.github/workflows/: ci.yml  dsc-acceptance.yml  gui-smoke.yml  linux-release.yml  macos-release.yml  multiplatform-ci.yml
docs/: AGENT_CHAT.md  APPLE.md  ARCHITECTURE.md  CURSOR.md  DEVICE_AGENT.md  DYLD.md  GUI.md  GUI_TESTING.md  LICENSES.md  MCP_TESTING.md  MODULES.md  PRODUCT.md  RAG.md  RELEASES.md  STOCK_PARITY.md  SWIFT.md  TESTING_DYLD.md  macos-liquid-glass.md
dyldextractor/: pyproject.toml
ghidra_scripts/: DumpClassDataVibe.java  DumpDecompileSample.java  DumpEntropyVibe.java  DumpEntrypointsVibe.java  DumpEquatesVibe.java  DumpFunctionGraphVibe.java  DumpFunctionRefsVibe.java  DumpFunctionTagsVibe.java  DumpRegistersVibe.java  DumpRelocationsVibe.java  DumpSwiftNamespaces.java  ImportAppleBundle.java  ImportDyldCacheImage.java  RenameFunctionVibe.java
gui-tests/: acceptance-dsc-appkit-skylight.sh  acceptance-dsc-import.sh  codebrowser-parity.ad  cursor-mcp-usability.sh  debugger-parity.ad  emulator-parity.ad  gui-control-schema.json  run-ci-smokes.sh  run-device-agent-tests.sh  run-smoke.sh  run-stock-capability-suite.sh  smoke-a11y-linux.ad  smoke-a11y.ad  smoke-agent-api-config.sh  smoke-agent-mcp-tools.sh  smoke-agent-npu.sh  smoke-agent-sidebar.sh  smoke-agent-tool-permissions.sh  smoke-agent-welcome.sh  smoke-app-bundle.sh  smoke-appkit-classes.sh  smoke-appkit-decompile.sh  smoke-apple-cli.sh  smoke-decompile.sh  smoke-dyld-mcp.sh  smoke-function-graph.sh  smoke-gui-control.sh  smoke-help.sh  smoke-jspace-rag.sh  smoke-malimite-mcp.sh  smoke-malimite.sh  smoke-providers-mcp.sh  smoke-rag-agent.sh  smoke-whoami-decompile.sh  test-dyld-decompile-mcp.sh  test-dyld-workflow.sh  test-gui-parity.sh  vt-parity.ad
gui-tests/linux/: smoke-a11y.ad
gui-tests/scenarios/: agent-test.json  dyld-workflow.json  navigation-test.json  smoke-test.json
linux/GhidraVibe/: README.md  meson.build
linux/GhidraVibe/data/: ghidra-vibe.desktop
linux/GhidraVibe/src/: a11y.c  a11y.h  dock.c  dock.h  dsc_setup.c  dsc_setup.h  graph_view.c  graph_view.h  help_view.c  help_view.h  main.c  mcp_client.c  mcp_client.h  splash.c  splash.h  stock_tools.c  stock_tools.h  theme.c  theme.h
macos/GhidraVibe/: Package.resolved  Package.swift
native-ui/: README.md
native-ui/a11y/: catalog.json
native-ui/mcp/: tool-map.json
native-ui/menus/: actions.json
native-ui/parity/: CAPABILITY_MATRIX.json  CodeBrowser.chrome.json  (+12 more)
rust/: Cargo.toml
rust/ghidra-vibe-tools/: Cargo.toml
rust/ghidra-vibe-tools/src/: embed.rs  index_mcp.rs  lib.rs  playbook.rs  retrieve.rs  store.rs
scripts/: build-engine-local.sh  check-a11y-ids.sh  check-capability-matrix.sh  check-codebrowser-impl.sh  check-codebrowser-inventory.sh  check-liquid-glass.sh  check-stock-help.sh  check-stock-tracked-gaps.sh  check-stock-universe.sh  codebrowser-parity-loop.sh  extract-codebrowser-inventory.py  extract-stock-help.py  extract-stock-inventory.py  extract-stock-universe.py  generate-capability-matrix.py  generate-release-notes.sh  generate-stock-parity-ids.py  ghidra-vibe-analyzeHeadless  ghidra-vibe-apple  ghidra-vibe-device-agent  ghidra-vibe-dyld  ghidra-vibe-jspace  ghidra-vibe-mcp-ext  ghidra-vibe-mcp-headless  ghidra-vibe-test-recorder  release-source-hash.sh  stock-parity-loop.sh  sync-stock-catalog.py  sync-tracked-gaps.py  test-mcp-functionality
(+122 files in other folders)
